--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,9 +8,9 @@
 	"compatibility_date": "2025-04-04",
 	"compatibility_flags": ["nodejs_compat"],
 	"main": "./workers/app.ts",
-	"vars": {
-		"VALUE_FROM_CLOUDFLARE": "Hello from Cloudflare"
-	},
+	// "vars": {
+	// 	"VALUE_FROM_CLOUDFLARE": "Hello from Cloudflare"
+	// },
 	"observability": {
 		"enabled": true
 	},
